# Django-Web-Admin

./: Caddyfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: django.yml
dashboard/: consumers.py  forms.py  middleware.py  routing.py  urls.py  views.py
dashboard/static/dashboard/: dashboard.css  dashboard.js  login.css  otp.css  sidebar_base.css
dashboard/templates/dashboard/: base.html  index.html  sidebar_base.html  test.html
dashboard/templates/registration/: login.html  otp.html
djangoWeb/: asgi.py  decorators.py  settings.py  urls.py  wsgi.py
file_manager/: __init__.py  consumers.py  file_manager.py  forms.py  routing.py  tests.py  urls.py  views.py
file_manager/static/file_manager/: file_manager.css  file_manager.js
file_manager/templates/file_manager/: index.html
run_process/: __init__.py  apps.py  consumers.py  routing.py  views.py
run_process/templates/run_process/: index.html  index_old.html
src/: manage.py
src/dashboard/: consumers.py  forms.py
src/dashboard/static/dashboard/: dashboard.css  dashboard.js  login.css
src/dashboard/templatetags/: my_filter.py
src/djangoWeb/: asgi.py  settings.py  urls.py
src/file_manager/: __init__.py  apps.py  consumers.py  file_manager.py  views.py
src/run_process/: __init__.py  apps.py  consumers.py  routing.py  urls.py  views.py
src/xterm/: apps.py  constants.py  consumers.py  shell_setup.py  tests.py  views.py
xterm/: apps.py  constants.py  consumers.py  routing.py  urls.py  views.py
xterm/templates/xterm/: index.html
(+6 files in other folders)
